article-like 구현

--- a/service/like/src/main/resources/application.yml
+++ b/service/like/src/main/resources/application.yml
@@ -1,1 +1,15 @@
-server.port: 9003
+server.port: 9002
+spring:
+  application:
+    name: ys-board-like-service
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://127.0.0.1:3306/article_like
+    username: root
+    password: root
+  jpa:
+    database-platform: org.hibernate.dialect.MySQLDialect
+    open-in-view: false
+    show-sql: true
+    hibernate:
+      ddl-auto: none
