--- a/service/view/src/main/resources/application.yml
+++ b/service/view/src/main/resources/application.yml
@@ -1,1 +1,21 @@
-server.port: 9002
+server.port: 9003
+spring:
+  application:
+    name: ys-board-view-service
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://127.0.0.1:3306/article_view
+    username: root
+    password: root
+  jpa:
+    database-platform: org.hibernate.dialect.MySQLDialect
+    open-in-view: false
+    show-sql: true
+    hibernate:
+      ddl-auto: none
+  data:
+    redis:
+      host: 127.0.0.1
+      port: 6379
+  kafka:
+    bootstrap-servers: 127.0.0.1:9092
