--- a/settings.gradle
+++ b/settings.gradle
@@ -2,6 +2,8 @@ rootProject.name = 'ys-board'
 
 include 'common'
 include 'common:snowflake'
+include 'common:data-serializer'
+include 'common:event'
 include 'service'
 include 'service:article'
 include 'service:comment'
