게시글 조회 최적화
- 게시글 조회 서비스 분리
- 게시글 조회 queryModel 정의
- 게시글 조회 redis repository 구성
- 게시글 조회 서비스 event Handler 구성

--- a/service/article-read/src/main/resources/application.yml
+++ b/service/article-read/src/main/resources/application.yml
@@ -1,1 +1,26 @@
 server.port: 9005
+spring:
+  application:
+    name: ys-board-article-read-service
+  data:
+    redis:
+      host: 127.0.0.1
+      port: 6379
+  kafka:
+    bootstrap-servers: localhost:9092
+    consumer:
+      group-id: ys-board-article-read-service
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      enable-auto-commit: false
+endpoints:
+  ys-board-article-service:
+    url: http://localhost:9000
+  ys-board-comment-service:
+    url: http://localhost:9001
+  ys-board-like-service:
+    url: http://localhost:9002
+  ys-board-vview-service:
+    url: http://localhost:9003
+
+
