[게시글 조회 최적화] 조회수 캐시 적용

--- a/service/article-read/src/main/resources/application.yml
+++ b/service/article-read/src/main/resources/application.yml
@@ -20,7 +20,7 @@ endpoints:
     url: http://localhost:9001
   ys-board-like-service:
     url: http://localhost:9002
-  ys-board-vview-service:
+  ys-board-view-service:
     url: http://localhost:9003
 
 
